tests/language_modules/02_import/invalid_semantics/keyword_import_module_name.vf
module App.Main

import module

end App.Main